--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,31 +1,40 @@
-name-template: 'v$RESOLVED_VERSION 🌈'
-tag-template: 'v$RESOLVED_VERSION'
-categories:
-  - title: '🚀 Features'
-    labels:
-      - 'feature'
-      - 'enhancement'
-  - title: '🐛 Bug Fixes'
-    labels:
-      - 'fix'
-      - 'bugfix'
-      - 'bug'
-  - title: '🧰 Maintenance'
-    label: 'chore'
-change-template: '- $TITLE @$AUTHOR (#$NUMBER)'
-change-title-escapes: '\<*_&' # You can add # and @ to disable mentions, and add ` to disable code blocks.
-version-resolver:
-  major:
-    labels:
-      - 'major'
-  minor:
-    labels:
-      - 'minor'
-  patch:
-    labels:
-      - 'patch'
-  default: patch
-template: |
-  ## Changes
+  name-template: 'v$RESOLVED_VERSION'
+  tag-template: 'v$RESOLVED_VERSION'
+  template: |
+    # What's Changed
 
-  $CHANGES
+    $CHANGES
+
+    **Full Changelog**: https://github.com/$OWNER/$REPOSITORY/compare/$PREVIOUS_TAG...v$RESOLVED_VERSION
+
+  categories:
+    - title: 'Breaking'
+      label: 'breaking'
+    - title: '🚀 Features'
+      label: 'feature'
+    - title: '🐛 Bug Fixes'
+      lable: 'bug'
+    - title: 'Maintenance'
+      label: 'maintenance'
+    - title: 'Documentation'
+      label: 'docs'
+      collapse-after: 5
+
+release-drafter.yml
+  version-resolver:
+    major:
+      labels:
+        - 'breaking'
+    minor:
+      labels:
+        - 'feature'
+    patch:
+      labels:
+        - 'bug'
+        - 'maintenance'
+        - 'docs'
+        - 'dependencies'
+        - 'security'
+
+  exclude-labels:
+    - 'skip-changelog'
